# recommendation-support-app

./: .env.example  .gitignore  README.md  compose.production.yml  docker-compose.integration.yml  docker-compose.yml  justfile  mise.toml  nuxt.config.ts  package.json
apps/api/: Dockerfile  Dockerfile.integration  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_member_management_tables.py  0002_create_project_experiences.py  0003_create_project_reports.py  0004_create_member_evaluations.py  0005_create_skills.py  0006_create_recommendations.py  0007_create_recommendation_evidences.py  0008_create_retention_policies.py  0009_create_ai_tables.py  0010_create_markdown_imports.py  0011_create_audit_logs.py  0012_add_oidc_subject_to_users.py  0013_move_markdown_content_to_object_storage.py
apps/api/app/: __init__.py  main.py
apps/api/app/admin/: __init__.py  audit.py  schemas.py  service.py
apps/api/app/ai/: __init__.py  broker.py  dispatcher.py  gateway.py  orchestrator.py  schemas.py  service.py  tasks.py
apps/api/app/api/: __init__.py
apps/api/app/bootstrap/: __init__.py  cli.py  service.py
apps/api/app/core/: __init__.py  config.py  errors.py  observability.py
apps/api/app/evaluations/: __init__.py  schemas.py  (+1 more)
apps/api/tests/: conftest.py  test_admin.py  test_admin_records.py  test_ai.py  test_ai_gateway.py  test_api_contract.py  test_authentication.py  test_authorization.py  test_bootstrap_cli.py  test_current_user.py  test_health.py  test_markdown_imports.py  test_members.py  test_projects.py  test_recommendations.py
(+152 files in other folders)
