[project]
name = "recommendation-support-api"
version = "0.1.0"
description = "推薦業務支援システムのREST API"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1.16,<2",
  "bleach>=6.2,<7",
  "dramatiq[redis]>=1.18,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "markdown-it-py>=3.0,<5",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
  "python-multipart>=0.0.20,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
  "ty>=0.0.1a18,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
